feat: floating image

--- a/src/content/blog/2025/2025-12-22-2025-in-a-nutshell/index.mdx
+++ b/src/content/blog/2025/2025-12-22-2025-in-a-nutshell/index.mdx
@@ -18,7 +18,9 @@ This was a year of change (another one :disappointed_relieved:), as I moved from
 
 It was personally a challenge in the technical side, I "changed" my beloved Vue for React as a main framework, but I should say that they have more similarities than differences (and now no one can hear us, I still prefer Vue :stuck_out_tongue_closed_eyes:), and also in the cultural side. 
 
-I joined the Foundations team, which is in charge of the [f0 design system](https://github.com/factorialco/f0) and component library that is used across all the company products, and that means a lot of responsibility and challenges to tackle, but also a great opportunity to learn and grow as a professional, but I failed... I was not able to complete all the goals I set for myself at the beginning of the year.
+I joined the Foundations team, which is in charge of the [f0 design system](https://github.com/factorialco/f0) and component library that is used across all the company products, and that means a lot of responsibility and challenges to tackle, but also a great opportunity to learn and grow as a professional, but **I failed**... 
+
+:float-image[]{src="./failure.png" maxWidth="320px" float="right"}I was not able to complete all the goals I set for myself at the beginning of the year.
 
 It is true that I learned a lot, and I was able to contribute to the team and the company in a meaningful way:
 
@@ -29,11 +31,11 @@ It is true that I learned a lot, and I was able to contribute to the team and th
 
 But I also faced some challenges that I was not able to overcome, and that made me feel frustrated and that I was not providing the expected (by myself) value.
 
-Now it's time to rest and reflect on what I can do better in the next year, and how I can continue to grow as a professional and contribute to the success of the company.
+Now it's time to reflect on what I can do better in the next year, and how I can continue to grow as a professional and contribute to the success of the company.
 
 The most positive part is that I found awesome people in the team (in all senses, professional and personal), really special people who are leaving a lasting impression on me.
 
-And as a funny thing, I discovered that I'm the developer in my company who uses tab completion on Cursor the most, by a large margin:
+And as a curiosity, I discovered that I'm the developer in my company who uses tab completion on Cursor the most, by a large margin:
 
 ![](./cursor.png)
 
